--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint-message": "echo 'Lint code before commit, refuse if error occurred'",
     "lint": "npx eslint ./**/*.ts",
     "fix": "npx eslint ./**/*.ts --fix",
-    "start:app": "yarn build:dev && yarn --cwd ./app run update  && yarn --cwd ./app run start",
+    "start:app": "yarn --cwd ./app run update  && yarn --cwd ./app run start",
     "new": "npx ts-node --project scripts/tsconfig.json scripts/new/index.ts"
   },
   "workspaces": [
