--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,5 +28,8 @@
       "language": "typescriptreact",
       "autoFix": true
     }
-  ]
+  ],
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  }
 }
