feat: 新增两个自定义的hook

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "postinstall": "lerna bootstrap",
     "build": "cross-env NODE_ENV=production npx lerna run build",
     "build:dev": "cross-env NODE_ENV=development npx lerna run build",
     "jest": "npx lerna run jest",
-    "prepublish": "lerna run prepublish",
     "prettier": "prettier --write './packages/**/*.ts' './packages/**/*.tsx' --config ./.prettierrc",
     "publish-all": "yarn build && npx lerna publish patch -y --registry http://registry.npmjs.org",
     "lint-message": "echo 'Lint code before commit, refuse if error occurred'",
@@ -45,7 +45,9 @@
     "@babel/core": "^7.5.5",
     "@babel/plugin-transform-runtime": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
+    "@rollup/plugin-commonjs": "^11.0.0",
     "@rollup/plugin-json": "^4.0.0",
+    "@rollup/plugin-node-resolve": "^6.0.0",
     "@rollup/plugin-replace": "^2.2.1",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.23",
@@ -78,7 +80,6 @@
     "rollup": "^1.19.4",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-babel-minify": "^9.1.1",
-    "rollup-plugin-commonjs": "^10.0.2",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-size-snapshot": "^0.10.0",
