--- a/packages/use-set-state/package.json
+++ b/packages/use-set-state/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toolkitss/use-set-state",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "setState",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
@@ -14,8 +14,8 @@
     "setState"
   ],
   "dependencies": {
-    "@toolkitss/helper": "^0.0.14",
-    "@toolkitss/custom-hook": "^0.0.1"
+    "@toolkitss/custom-hook": "^0.0.2",
+    "@toolkitss/helper": "^0.0.15"
   },
   "peerDependencies": {
     "react": ">=16.8.3"
