--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   ],
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "lint-staged": {
@@ -45,6 +46,8 @@
     "@babel/core": "^7.5.5",
     "@babel/plugin-transform-runtime": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
     "@rollup/plugin-commonjs": "^11.0.0",
     "@rollup/plugin-json": "^4.0.0",
     "@rollup/plugin-node-resolve": "^6.0.0",
@@ -55,7 +58,7 @@
     "@types/react-dom": "^16.9.4",
     "@typescript-eslint/eslint-plugin": "^2.9.0",
     "@typescript-eslint/parser": "^2.9.0",
-    "autoprefixer": "^9.7.3",
+    "autoprefixer": "^9.7.6",
     "cross-env": "^6.0.3",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
@@ -74,6 +77,9 @@
     "lerna-ci": "^0.0.4",
     "lint-staged": "^9.5.0",
     "postcss-clean": "^1.1.0",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-url": "^8.0.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -93,12 +99,24 @@
     "npm": ">= 3.0.0",
     "yarn": ">=1.10.1"
   },
+  "browserslist": [
+    "ie >= 9",
+    "Chrome >= 21",
+    "Firefox >= 1",
+    "Edge >= 13",
+    "last 3 versions"
+  ],
   "lerna-ci": {
     "syncremote": [
       "@toolkitss/custom-hook"
     ]
   },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
   "dependencies": {
-    "antd": "^4.1.3"
+    "core-js": "2"
   }
 }
